syntax = "proto3";

package pld;

option go_package = "./";

service PldService {
  rpc CheckInBlacklist (CheckInBlackListReq) returns (CheckInBlackListRes) {}
}

message CheckInBlackListReq {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
  string birthday = 4;
}

message CheckInBlackListRes {
    bool is_in_blacklist = 1;
}
